--- a/mock/templates/mock/index.html
+++ b/mock/templates/mock/index.html
@@ -35,7 +35,7 @@
       padding-top: 1%;
     }
     div.ex2 {
-      padding-top: 25%;
+      padding-top: 20%;
     }
 </style>
 </head>
@@ -83,6 +83,7 @@
 {{tablestuff|safe}}
 {%else%}
 <div class="ex2">
+  <h1> Government Spending Data Project </h1>
 <form method="post">
     {% csrf_token %}
 
